@@ -355,6 +355,11 @@
                     .acc-section
                       .acc-content
                   %li
+                    %a{ :href => "#dynamically_creating_types" }
+                      Dynamically creating Types
+                    .acc-section
+                      .acc-content
+                  %li
                     %a{ :href => "#skipping_over_unused_data" }
                       Skipping over unused data
                     .acc-section
