@@ -5,6 +5,8 @@
 * Updated to Ruby 2.0
 * Arrays now accept BinData object factories for :type (feature request by
   Matt Dainty).
+* Dynamically generated BinData objects can use the :name parameter to
+  register themselves.
 
 == Version 1.4.5 (2012-07-24)
 
